@@ -1,3 +1,9 @@
+2011-01-31  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/47455
+	* trans-expr.c (gfc_conv_procedure_call): Handle procedure pointers
+	with pointer or allocatable result.
+
 2011-01-31  Paul Thomas  <pault@gcc.gnu.org>
 
 	PR fortran/47519
